fix flickering bug

--- a/app/components/nav-link/NavLink.module.css
+++ b/app/components/nav-link/NavLink.module.css
@@ -12,7 +12,7 @@
   grid-column: 1;
   padding: 0rem 1.5rem 0rem 1.5rem;
   border-radius: 0.5rem;
-  border: var(--secondary-color) 2px solid;
+  outline: var(--secondary-color) 2px solid;
   color: var(--secondary-color);
   font-family: var(--font-heading);
   text-align: center;
